# todo_rust_server

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20231205_094152_create_todo_table.rs  m20231206_075818_create_user_table.rs
src/: main.rs
src/entities/: mod.rs  prelude.rs  todo.rs  user.rs
src/guards/: jwt_access.rs  jwt_guard.rs  jwt_refresh.rs  mod.rs
src/routes/: auth.rs  todo.rs
