[package]
name = "todo_app_serv"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
dotenv = "0.15.0"
migration = { path = "migration" }
tokio = {version = "1.34", features = ["full"]}
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
rocket = {version = "0.5.0", features=["json"]}
rocket_cors = "0.6.0"
jwt-simple = "0.12.1"
bcrypt = "0.15.0"
